--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="hero-image">
                     <img src="images/enes-photo.JPG" alt="Enes Karanfil" class="profile-photo">
                 </div>
-                <h1>Enes Karanfil, MSc.</h1>
+                <h1>Enes Karanfil.</h1>
                 <p class="subtitle">Software Engineer, Machine Learning</p>
                 <p class="tagline">Exploring the intersection of large language models and system design — making intelligence scalable.</p>
                 
