updated my page.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="hero-image">
                     <img src="images/enes-photo.JPG" alt="Enes Karanfil" class="profile-photo">
                 </div>
-                <h1>Enes Karanfil.</h1>
+                <h1>Enes Karanfil</h1>
                 <p class="subtitle">Software Engineer, Machine Learning</p>
                 <p class="tagline">Exploring the intersection of large language models and system design — making intelligence scalable.</p>
                 
@@ -37,10 +37,10 @@
                     <div class="card">
                         <h3>Key Highlights</h3>
                         <ul class="highlights-list">
-                            <li>🧠 Joined AIST, Tokyo for a 6-month journey researching multimodal LLMs in remote sensing and enjoyed life in Japan!</li>
-                            <li>✨ Our work "Vision-Language Framework for Multispectral Scene Representation Using Language-Grounded Features" got accepted to IGARSS 2025.</li>
-                            <li>🚀 Released my first journal paper, Spectral-LLaVA, introducing a multimodal LLM for multispectral remote sensing.</li>
-                            <li>🌏 Visited Brisbane, Australia to attend IGARSS 2025 and share my Spectral-LLaVA research an unforgettable mix of science and travel.</li>
+                            <li> 22.10.224 -- Joined AIST, Tokyo for a 6-month journey researching multimodal LLMs in remote sensing and enjoyed life in Japan!</li>
+                            <li> 20.03.2025 -- Our work "Vision-Language Framework for Multispectral Scene Representation Using Language-Grounded Features" got accepted as oral presentation to IGARSS 2025.</li>
+                            <li> 01.06.2025 -- Released my first journal paper, Spectral-LLaVA, introducing a multimodal LLM for multispectral remote sensing.</li>
+                            <li> 01.08.2025 -- Visited Brisbane, Australia to attend IGARSS 2025 and share my Spectral-LLaVA research an unforgettable mix of science and travel.</li>
                         </ul>
                         <a href="cv/Enes_Karanfil_CV.pdf" download="Enes_Karanfil_CV.pdf" class="card-link">View full CV ↗</a>
                     </div>
@@ -48,14 +48,7 @@
                     <div class="card">
                         <h3>Latest on Medium</h3>
                         <div class="project-item">
-                            <p>Article 1</p>
-                        </div>
-                        <div class="project-item">
-                            <p>Article 2</p>
-                        </div>
-                        <div class="project-item">
-                            <p>Article 3</p>
-                        </div>
+                            <p>From Dense Quadratic Layers to Structured Efficiency</p>
                     </div>
                     
                     <div class="card">
