--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
                     <div class="card">
                         <h3>Latest on Medium</h3>
                         <div class="project-item">
-                            <p>From Dense Quadratic Layers to Structured Efficiency</p>
+                             <p>From Dense Quadratic Layers to Structured Efficiency</p>
+                        </div>
                     </div>
                     
                     <div class="card">
